<resources>
    <string name="app_name">Fact ZAP</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="trivia">Trivia</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="amount">Amount: 25 </string>
    <string name="category">Category: </string>
    <string name="difficulty">Difficulty: </string>
    <string name="type">Type: </string>
    <string name="categories">Categories:</string>
    <string name="custom_quiz">Custom Quiz</string>
    <string name="customize_quiz">Edit to your preferences!</string>
    <string name="custom_quiz_image">Custom Quiz Image</string>
    <string name="streak_placeholder">🔥 Streak: </string>
    <string name="continue_your_streak">Continue your streak!</string>
    <string name="daily_question_textview">Daily Question</string>
    <string name="random_quiz_image">Random Quiz Image</string>
    <string name="questions_placeholder_text">0 questions</string>
    <string name="category_name_placeholder">Comics</string>
    <string name="category_image">category image</string>
    <string name="random_fact">Random fact</string>
    <string name="learn_something_new">Learn something new!</string>
    <string name="num_of_questions"> %d questions</string>
    <string name="select_avatar_title">Select Avatar</string>

    <string name="sampleQuestion">What is the value of universal gravitation Constant?</string>
    <string name="questionInfo">Category:\nType:\nDifficulty:</string>
    <string name="get_started_text">Welcome to QuizWiz\nChallenge your knowledge and take quiz of your own field of interest</string>
    <string name="forgot_password_msg">Don\'t worry! it happens. Please enter the email address associated with your account.</string>
    <string name="on_submit_msg">Check out your mailbox, you will receive an email containing link where you can reset your password</string>
    <string name="question_num_placeholder">Question 0/10</string>
    <string name="question_timer_placeholder">0</string>
    <string name="next_question_placeholder">Next</string>
    <string name="option_d">Option D</string>
    <string name="option_c">option_C</string>
    <string name="option_b">option_b</string>
    <string name="option_a">option_a</string>
    <string name="question_text">Question %1$d/%2$d</string>
    <string name="time_placeholder">Time</string>
    <string name="type_placeholder">Type</string>
    <string name="difficulty_placeholder">Difficulty</string>
    <string name="question_number_placeholder">1.</string>
    <string name="question_time_placeholder">0</string>
    <string name="question_type_placeholder">true/false</string>
    <string name="question_difficulty_placeholder">easy</string>
    <string name="question_score_placeholder">0</string>
    <string name="home_placeholder">Home</string>
    <string name="total_points_placeholder">Total Points: 0</string>
    <string name="points_title_placeholder">Points</string>
    <string name="question_number_title_placeholder">Q.</string>
    <string name="you_finished_placeholder">You Finished!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="custom_quiz_title">Custom Quiz</string>
    <string name="custom_quiz_Image">Custom Quiz Image</string>
    <string name="results_image">Results Image</string>
    <string name="random_fact_title">Random Fact</string>
    <string name="leaderboard_TextView">Leaderboard</string>
    <string name="all_time_Text">All time</string>
    <string name="this_week_text">This week</string>
    <string name="this_month_text">This month</string>
    <string name="position_2_text">2</string>
    <string name="position_1_text">1</string>
    <string name="position_3_text">3</string>
    <string name="name_placeholder">Name</string>
    <string name="position_4_placeholder">4</string>
    <string name="points_placeholder">0</string>
    <string name="trophy_icon">🏆</string>
    <string name="target_icon">🎯</string>
    <string name="join_date_placeholder">Joined 7 November 2024</string>
    <string name="achievements_TextView">Achievements</string>
    <string name="recent_stats_TextView">Recent Stats</string>
    <string name="last_score_TextView">Last Score:</string>
    <string name="weekly_score_TextView">Weekly Score:</string>
    <string name="weekly_rank_TextView">Weekly Rank:</string>
    <string name="monthly_score_TextView">Monthly Score:</string>
    <string name="monthly_rank_TextView">Monthly Rank:</string>
    <string name="sign_out_TextView">Sign Out</string>
    <string name="edit_profile_TextView">Edit Profile</string>
    <string name="achievements_ScrollView">Achievements Scrollview</string>
    <string name="rank_TextView">Rank:</string>
    <string name="points_TextView">Points:</string>
    <string name="preferences_TextView">Preferences</string>
    <string name="profile_picture_TextView">Profile Picture</string>
    <string name="daily_quiz_notification_time_TextView">Daily Quiz Notification Time</string>
    <string name="preferred_difficulty_TextView">Preferred Difficulty</string>
    <string name="any_RadioButton">Any</string>
    <string name="easy_RadioButton">Easy</string>
    <string name="medium_RadioButton">Medium</string>
    <string name="hard_RadioButton">Hard</string>
    <string name="user_profile_picture_ImageView">User Profile Picture</string>
    <string name="daily_quiz_notification_time_Toolbar">Notification Time</string>

</resources>